Kelsey Development Sandbox/src/objects/DS_PTSD_CA_F__c.object
<CustomObject>
    <fields>
        <fullName>Background_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Background ID</label>
        <referenceTo>DS_Background_Family_Info_F__c</referenceTo>
        <relationshipLabel>DS PTSD CA F</relationshipLabel>
        <relationshipName>DS_PTSD_CA_F</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Client__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>DS PTSD CA F</relationshipLabel>
        <relationshipName>DS_PTSD_CA_F</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FDOAPTSDP__c</fullName>
        <description>Date of administration? Parent</description>
        <label>FDOAPTSDP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FDOAPTSD__c</fullName>
        <description>1. PTSD date of administration</description>
        <label>FDOAPTSD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FDOV__c</fullName>
        <formula>Background_ID__r.FDOV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FDOV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FMETPTSDP__c</fullName>
        <description>How was this form administered? Parent</description>
        <label>FMETPTSDP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMETPTSD__c</fullName>
        <description>3. How was this form administered?</description>
        <label>FMETPTSD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSAB1P__c</fullName>
        <description>PTSD RI Symptom B1 Parent</description>
        <label>FPTSAB1P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAB1__c</fullName>
        <description>PTSD RI Symptom B1</description>
        <label>FPTSAB1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAB2P__c</fullName>
        <description>PTSD RI Symptom B2 Parent</description>
        <label>FPTSAB2P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAB2__c</fullName>
        <description>PTSD RI Symptom B2</description>
        <label>FPTSAB2</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAB3P__c</fullName>
        <description>PTSD RI Symptom B3 Parent</description>
        <label>FPTSAB3P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAB3__c</fullName>
        <description>PTSD RI Symptom B3</description>
        <label>FPTSAB3</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAC1P__c</fullName>
        <description>PTSD RI Symptom C1 Parent</description>
        <label>FPTSAC1P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAC1__c</fullName>
        <description>PTSD RI Symptom C1</description>
        <label>FPTSAC1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAC2P__c</fullName>
        <description>PTSD RI Symptom C2 Parent</description>
        <label>FPTSAC2P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAC2__c</fullName>
        <description>PTSD RI Symptom C2</description>
        <label>FPTSAC2</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAD1P__c</fullName>
        <description>PTSD RI Symptom D1 Parent</description>
        <label>FPTSAD1P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAD1__c</fullName>
        <description>PTSDRI Symptom D1</description>
        <label>FPTSAD1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAD2P__c</fullName>
        <description>PTSD RI Symptom D2 Parent</description>
        <label>FPTSAD2P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAD2__c</fullName>
        <description>PTSDRI Symptom D2</description>
        <label>FPTSAD2</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAD3P__c</fullName>
        <description>PTSD RI Symptom D3 Parent</description>
        <label>FPTSAD3P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAD3__c</fullName>
        <description>PTSDRI Symptom D3</description>
        <label>FPTSAD3</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAE1P__c</fullName>
        <description>PTSD RI Symptom E1 Parent</description>
        <label>FPTSAE1P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAE1__c</fullName>
        <description>PTSDRI Symptom E1</description>
        <label>FPTSAE1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAE2P__c</fullName>
        <description>PTSD RI Symptom E2 Parent</description>
        <label>FPTSAE2P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAE2__c</fullName>
        <description>PTSDRI Symptom E2</description>
        <label>FPTSAE2</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAE3P__c</fullName>
        <description>PTSD RI Symptom E3 Parent</description>
        <label>FPTSAE3P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAE3__c</fullName>
        <description>PTSDRI Symptom E3</description>
        <label>FPTSAE3</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAPPCNP__c</fullName>
        <description>Record is Appropriate Parent</description>
        <label>FPTSAPPCNP</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAPPCN__c</fullName>
        <description>Record is Appropriate</description>
        <label>FPTSAPPCN</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAPPCP__c</fullName>
        <description>Record is Appropriate Parent</description>
        <formula>IF( ISNULL(FPTSAPPCNP__c), NULL, IF(FPTSAPPCNP__c =  1 , &apos;Yes&apos;, &apos;No&apos;))</formula>
        <label>FPTSAPPCP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPTSAPPC__c</fullName>
        <formula>IF( ISNULL(FPTSAPPCN__c), NULL, IF(FPTSAPPCN__c = 1 , &apos;Yes&apos;, &apos;No&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FPTSAPPC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPTSBCNP__c</fullName>
        <description>PTSD Crit B cutoff - Num Parent</description>
        <label>FPTSBCNP</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSBCN__c</fullName>
        <description>PTSD Crit B cutoff - Num</description>
        <label>FPTSBCN</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSBMNP__c</fullName>
        <description>PTSD Crit B met - Num Parent</description>
        <formula>IF( ISNULL(FPTSBCNP__c), NULL, IF(FPTSBCNP__c  &gt;=  1, 1, 0 ))</formula>
        <label>FPTSBMNP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSBMN__c</fullName>
        <formula>IF( ISNULL(FPTSBCN__c), NULL, IF(FPTSBCN__c &gt;= 1, 1, 0 ))</formula>
        <label>FPTSBMN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSBMP__c</fullName>
        <description>PTSD Crit B met Parent</description>
        <formula>IF( ISNULL(FPTSBMNP__c), NULL, IF(FPTSBMNP__c  =  1, &quot;Yes&quot;, &quot;No&quot; ))</formula>
        <label>FPTSBMP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPTSBM__c</fullName>
        <formula>IF( ISNULL(FPTSBMN__c), NULL, IF(FPTSBMN__c = 1, &quot;Yes&quot;, &quot;No&quot; ))</formula>
        <label>FPTSBM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPTSBRNP__c</fullName>
        <description>PTSD Crit B raw score - Num Parent</description>
        <formula>FPTSAB1P__c  +  FPTSAB2P__c  +  FPTSAB3P__c  +  FPTSAB4P__c  +  FPTSAB5P__c</formula>
        <label>FPTSBRNP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSBRN__c</fullName>
        <formula>FPTSAB1__c + FPTSAB2__c + FPTSAB3__c + FPTSAB4__c + FPTSAB5__c</formula>
        <label>FPTSBRN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSCCNP__c</fullName>
        <description>PTSD Crit C cutoff - Num Parent</description>
        <label>FPTSCCNP</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSCCN__c</fullName>
        <description>PTSD Crit C cutoff - Num</description>
        <label>FPTSCCN</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSCMNP__c</fullName>
        <description>PTSD Crit C met - Num Parent</description>
        <formula>IF( ISNULL(FPTSCCNP__c), NULL, IF(FPTSCCNP__c  &gt;= 1, 1, 0 ))</formula>
        <label>FPTSCMNP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSCMN__c</fullName>
        <formula>IF( ISNULL(FPTSCCN__c), NULL, IF(FPTSCCN__c &gt;= 1, 1, 0 ))</formula>
        <label>FPTSCMN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSCMP__c</fullName>
        <description>PTSD Crit C met Parent</description>
        <formula>IF( ISNULL(FPTSCMNP__c), NULL, IF(FPTSCMNP__c  =  1, &quot;Yes&quot;, &quot;No&quot; ))</formula>
        <label>FPTSCMP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPTSCM__c</fullName>
        <formula>IF( FPTSCMN__c = 1, &quot;Yes&quot;, &quot;No&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FPTSCM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPTSCRNP__c</fullName>
        <description>PTSD Crit C raw score - Num Parent</description>
        <formula>FPTSAC1P__c  +  FPTSAC2P__c</formula>
        <label>FPTSCRNP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSCRN__c</fullName>
        <formula>FPTSAC1__c + FPTSAC2__c</formula>
        <label>FPTSCRN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSD1P__c</fullName>
        <description>Do these reactions (thoughts and feelings) bother or upset your child a lot? Parent</description>
        <label>FPTSD1P</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSD1SPP__c</fullName>
        <description>Describe distress Parent</description>
        <label>FPTSD1SPP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPTSD1__c</fullName>
        <description>1. Bother or upset you</description>
        <label>FPTSD1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSDCNP__c</fullName>
        <description>PTSD Crit D cutoff - Num Parent</description>
        <label>FPTSDCNP</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSDCN__c</fullName>
        <description>PTSD Crit D cutoff - Num</description>
        <label>FPTSDCN</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSDCP__c</fullName>
        <description>Significant Distress - FORMULA Parent</description>
        <formula>VALUE(TEXT( FPTSD1P__c )) =  1</formula>
        <label>FPTSDCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPTSDC__c</fullName>
        <formula>VALUE(TEXT( FPTSD1__c )) = 1</formula>
        <label>FPTSDC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPTSDMNP__c</fullName>
        <description>PTSD Crit D met - Num Parent</description>
        <formula>IF( ISNULL(FPTSDCNP__c), NULL, IF(FPTSDCNP__c  &gt;=  2, 1, 0 ))</formula>
        <label>FPTSDMNP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSDMN__c</fullName>
        <formula>IF( ISNULL(FPTSDCN__c), NULL, IF(FPTSDCN__c &gt;= 2, 1, 0 ))</formula>
        <label>FPTSDMN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSDMP__c</fullName>
        <description>PTSD Crit D met Parent</description>
        <formula>IF( ISNULL(FPTSDMNP__c), NULL, IF(FPTSDMNP__c  =  1, &quot;Yes&quot;, &quot;No&quot; ))</formula>
        <label>FPTSDMP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPTSDM__c</fullName>
        <formula>IF( ISNULL(FPTSDMN__c), NULL, IF(FPTSDMN__c = 1, &quot;Yes&quot;, &quot;No&quot; ))</formula>
        <label>FPTSDM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPTSDRNP__c</fullName>
        <description>PTSD Crit D raw score - Num Parent</description>
        <formula>FPTSAD1P__c  +  FPTSAD2P__c  + FPTSAD3P__c  +  FPTSAD4P__c  +  FPTSAD5P__c  +  FPTSAD6P__c  +  FPTSAD7P__c</formula>
        <label>FPTSDRNP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSDRN__c</fullName>
        <formula>FPTSAD1__c + FPTSAD2__c + FPTSAD3__c + FPTSAD4__c + FPTSAD5__c + FPTSAD6__c + FPTSAD7__c</formula>
        <label>FPTSDRN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSDURAP__c</fullName>
        <description>Have some of these reactions lasted at least one month? Parent</description>
        <label>FPTSDURAP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSDURA__c</fullName>
        <description>2. Duration greater than 1 month?</description>
        <label>FPTSDURA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSECNP__c</fullName>
        <description>PTSD Crit E cutoff - Num Parent</description>
        <label>FPTSECNP</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSECN__c</fullName>
        <description>PTSD Crit E cutoff - Num</description>
        <label>FPTSECN</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSEMNP__c</fullName>
        <description>PTSD Crit E met - Num Parent</description>
        <formula>IF( ISNULL(FPTSECNP__c), NULL, IF(FPTSECNP__c  &gt;=  2, 1, 0 ))</formula>
        <label>FPTSEMNP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSEMN__c</fullName>
        <formula>IF( ISNULL(FPTSECN__c), NULL, IF(FPTSECN__c &gt;= 2, 1, 0 ))</formula>
        <label>FPTSEMN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSEMP__c</fullName>
        <description>PTSD Crit E met Parent</description>
        <formula>IF( ISNULL(FPTSEMNP__c), NULL, IF(FPTSEMNP__c  =  1, &quot;Yes&quot;, &quot;No&quot; ))</formula>
        <label>FPTSEMP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPTSEM__c</fullName>
        <formula>IF( FPTSEMN__c = 1, &quot;Yes&quot;, &quot;No&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FPTSEM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPTSERNP__c</fullName>
        <description>PTSD Crit E raw score - Num Parent</description>
        <formula>FPTSAE1P__c  +  FPTSAE2P__c  +  FPTSAE3P__c  +  FPTSAE4P__c  +  FPTSAE5P__c  + FPTSAE6P__c</formula>
        <label>FPTSERNP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSERN__c</fullName>
        <formula>FPTSAE1__c + FPTSAE2__c + FPTSAE3__c + FPTSAE4__c + FPTSAE5__c + FPTSAE6__c</formula>
        <label>FPTSERN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSFCP__c</fullName>
        <description>Significant Functional Impairment - FORMULA Parent</description>
        <formula>OR( FPTSFHCP__c, FPTSFSCP__c, FPTSFRCP__c, FPTSFPCP__c )</formula>
        <label>FPTSFCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPTSFC__c</fullName>
        <formula>OR( FPTSFHC__c, FPTSFSC__c, FPTSFRC__c, FPTSFPC__c )</formula>
        <label>FPTSFC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPTSFH1P__c</fullName>
        <description>Do these reactions (thoughts and feelings) make it harder for your child to get along with people at home? Parent</description>
        <label>FPTSFH1P</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSFH1__c</fullName>
        <description>1. Do these reactions (thoughts and feelings) make it harder for you to get along with people at home?</description>
        <label>FPTSFH1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSFH2P__c</fullName>
        <description>Do these reactions (thoughts and feelings) get your child into trouble at home? Parent</description>
        <label>FPTSFH2P</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSFH2__c</fullName>
        <description>2. Do these reactions (thoughts and feelings) get you in trouble home?</description>
        <label>FPTSFH2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSFH3P__c</fullName>
        <description>Do these reactions (thoughts and feelings) cause your child to have some other problem at home? Parent</description>
        <label>FPTSFH3P</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSFH3__c</fullName>
        <description>3. Do these reactions (thoughts and feelings) cause some other problem at home?</description>
        <label>FPTSFH3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSFHCP__c</fullName>
        <description>Significant Functional Impairment Home - FORMULA Parent</description>
        <formula>MAX( VALUE(TEXT(FPTSFH1P__c)) , VALUE(TEXT(FPTSFH2P__c)) , VALUE(TEXT(FPTSFH3P__c)) ) =  1</formula>
        <label>FPTSFHCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPTSFHC__c</fullName>
        <formula>MAX( VALUE(TEXT(FPTSFH1__c)) , VALUE(TEXT(FPTSFH2__c)) , VALUE(TEXT(FPTSFH3__c)) ) = 1</formula>
        <label>FPTSFHC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPTSFHSPP__c</fullName>
        <description>Describe home Parent</description>
        <label>FPTSFHSPP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPTSFHSP__c</fullName>
        <description>3. Describe home</description>
        <label>FPTSFHSP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPTSFP1P__c</fullName>
        <description>Do these reactions (thoughts and feelings) make it harder for your child to do important things that other kids his/her age are doing? Parent</description>
        <label>FPTSFP1P</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSFP1__c</fullName>
        <description>1. Do these reactions (thoughts and feelings) make it harder for you to do important things that other kids your age are doing?</description>
        <label>FPTSFP1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSFP2P__c</fullName>
        <description>Do these reactions interfere with other areas of your child&apos;s development? Parent</description>
        <label>FPTSFP2P</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSFPCP__c</fullName>
        <description>Significant Functional Impairment Developmental - FORMULA Parent</description>
        <formula>VALUE(TEXT(FPTSFP1P__c)) =  1</formula>
        <label>FPTSFPCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPTSFPC__c</fullName>
        <formula>MAX( VALUE(TEXT(FPTSFP1__c))  ) = 1</formula>
        <label>FPTSFPC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPTSFPSPP__c</fullName>
        <description>Developmental Progression Describe Parent</description>
        <label>FPTSFPSPP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPTSFPSP__c</fullName>
        <description>2. Describe developmental progression</description>
        <label>FPTSFPSP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPTSFR1P__c</fullName>
        <description>Do these reactions (thoughts and feelings) make it harder for your child to get along with or make friends? Parent</description>
        <label>FPTSFR1P</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSFR1__c</fullName>
        <description>1. Do these reactions (thoughts and feelings) make it harder for you to get along with your friends or make new friends?</description>
        <label>FPTSFR1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSFRCP__c</fullName>
        <description>Significant Functional Impairment Peer - FORMULA Parent</description>
        <formula>VALUE(TEXT(FPTSFR1P__c)) =  1</formula>
        <label>FPTSFRCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPTSFRC__c</fullName>
        <formula>VALUE(TEXT(FPTSFR1__c)) = 1</formula>
        <label>FPTSFRC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPTSFRSPP__c</fullName>
        <description>Describe Peer Parent</description>
        <label>FPTSFRSPP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPTSFRSP__c</fullName>
        <description>1. Describe peer</description>
        <label>FPTSFRSP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPTSFS1P__c</fullName>
        <description>Do these reactions (thoughts and feelings) make it harder for your child to do well in school? Parent</description>
        <label>FPTSFS1P</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSFS1__c</fullName>
        <description>1. Do these reactions (thoughts and feelings) make it harder for you to do well in school?</description>
        <label>FPTSFS1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSFS2P__c</fullName>
        <description>Do these reactions (thoughts and feelings) cause your child other problems at school? Parent</description>
        <label>FPTSFS2P</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSFS2__c</fullName>
        <description>2. Do these reactions (thoughts and feelings) cause other problems in school?</description>
        <label>FPTSFS2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSFSCP__c</fullName>
        <description>Significant Functional Impairment School - FORMULA Parent</description>
        <formula>MAX( VALUE(TEXT(FPTSFS1P__c)) , VALUE(TEXT(FPTSFS2P__c)) ) =  1</formula>
        <label>FPTSFSCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPTSFSC__c</fullName>
        <formula>MAX( VALUE(TEXT(FPTSFS1__c)) , VALUE(TEXT(FPTSFS2__c)) ) = 1</formula>
        <label>FPTSFSC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPTSFSSPP__c</fullName>
        <description>Describe school Parent</description>
        <label>FPTSFSSPP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPTSFSSP__c</fullName>
        <description>2. Describe school</description>
        <label>FPTSFSSP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPTSOCNP__c</fullName>
        <description>PTSD score criteria - Num Parent</description>
        <formula>IF( ( FPTSBMNP__c + FPTSCMNP__c + FPTSDMNP__c + FPTSEMNP__c + if(OR(FPTSDCP__c = true, FPTSFCP__c = true), 1, 0) + if(ISPICKVAL(FPTSDURAP__c, &quot;1&quot;), 1, 0) ) = 6 , 1, 0)</formula>
        <label>FPTSOCNP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSOCN__c</fullName>
        <formula>IF( ( FPTSBMN__c + FPTSCMN__c + FPTSDMN__c + FPTSEMN__c + if(OR(FPTSDC__c = true, FPTSFC__c = true), 1, 0) + if(ISPICKVAL(FPTSDURA__c, &quot;1&quot;), 1, 0) ) = 6 , 1, 0)</formula>
        <label>FPTSOCN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSOCP__c</fullName>
        <description>PTSD score criteria Parent</description>
        <formula>IF(FPTSOCNP__c  =  1, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>FPTSOCP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPTSOC__c</fullName>
        <formula>IF(FPTSOCN__c = 1, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>FPTSOC</label>
        <type>Text</type>
    </fields>
</CustomObject>